--- a/src/app/interviews/available-interviews/view/view-interview-details/add-interviewee/add-interviewee.component.scss
+++ b/src/app/interviews/available-interviews/view/view-interview-details/add-interviewee/add-interviewee.component.scss
@@ -7,3 +7,10 @@ button.pull-rights{
     color: aliceblue;
     background-color: #6ec000 !important;
 }
+.preview-img{
+    float: center;
+    height: 200px !important;
+    border-radius: 50% !important;
+    align-content: center !important;
+    margin-left: 30%;
+}
