--- a/src/app/interviews/pre-interview-page/pre-interview-page.component.html
+++ b/src/app/interviews/pre-interview-page/pre-interview-page.component.html
@@ -1,10 +1,17 @@
 <div class="container">
   <p class="instructions">
-      <span class="title"><h5><b>Pre interview instructions</b></h5>
-    <hr>
+    <span class="title">
+      <h5><b>Pre interview instructions</b></h5>
+      <hr>
     </span>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus laborum deleniti laboriosam nihil libero minus quae explicabo nam aperiam assumenda debitis praesentium, consequuntur atque autem nobis ipsa, accusantium doloribus dolores.
   </p>
-<button mat-raised-button (click)="startActualInterview()" class="start_button btn-submits">Start interview <span class="fa fa-arrow-right"></span></button>
-<br>
+   <section style="text-align: center !important;">
+    This interview is to test the ability of the candidate to qualify for the support provided. The interview has a
+    timer, hence you won't be able to stop untill you finish... click the start interview button below to get started
+   </section>
+  
+  <button mat-raised-button (click)="startActualInterview()" class="start_button btn-submits">Start interview <span
+      class="fa fa-arrow-right"></span></button>
+  <br>
+
 </div>
