--- a/src/app/jobs/jobs-list/view/list-applicants/view-applicant/view-applicant.component.scss
+++ b/src/app/jobs/jobs-list/view/list-applicants/view-applicant/view-applicant.component.scss
@@ -6,3 +6,16 @@
 .attachments{
     width: 100% !important;
 }
+.documents{
+    box-shadow: 0 1px 2px rgba(219, 219, 219, 0.973);
+    padding: 10px !important;
+}
+.applicant_title{
+  font-size: 12pt;
+  text-transform: uppercase;
+  float: right;
+}
+.section{
+    font-size: 12pt;
+    padding:20px ;
+}
