--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -1,9 +1,6 @@
 <div class="body">
-  <!-- <div class="body"> -->
-
     <div class="row">
       <div class="col-md-3 col-sm-3 col-xs-12 -3 col-lg-3 col-xl-3">
-  
         <section class="left-partition">
           <img src="assets/found-logo.png" class="logo-img img-responsive"
             width="320px" height="50px" alt="">
@@ -36,8 +33,36 @@
                     </span>
                   </a>
                 </li>
+                <li>
+                  <a routerLink="/main/jobs"
+                    routerLinkActive="active">
+                    <img width="25px" src="assets/interviewee.png" alt="">
+                   Jobs
+                    <span
+                      class="pull-right">
+                      <svg
+                        width="1em"
+                        height="1em"
+                        viewBox="0 0 16 16"
+                        class="bi bi-chevron-right chev-form pull-right"
+                        fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          fill-rule="evenodd"
+                          d="M4.646 1.646a.5.5 0 0 1 .708 0l6
+                          6a.5.5
+                          0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8
+                          4.646
+                          2.354a.5.5
+                          0
+                          0 1 0-.708z"
+                          />
+                        </svg>
+                      </span>
+                    </a>
+                  </li>   
                 <li (click)="activateChild()"><a
-                    routerLink="/main/interviews/list/interviews"
+                   
                     routerLinkActive="active">
                     <img width="25px" src="assets/interview.png" alt="">
                     Interviews
@@ -64,6 +89,34 @@
                       </span>
                     </a>
                   </li>
+                  <li class="interview_child" *ngIf='parent_active'>
+                    <a  routerLink="/main/interviews/list/interviews"
+                      routerLinkActive="active">
+                      <img width="25px" src="assets/interviewee.png" alt="">
+                      All Interviews
+                      <span
+                        class="pull-right">
+                        <svg
+                          width="1em"
+                          height="1em"
+                          viewBox="0 0 16 16"
+                          class="bi bi-chevron-right chev-form pull-right"
+                          fill="currentColor"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6
+                            6a.5.5
+                            0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8
+                            4.646
+                            2.354a.5.5
+                            0
+                            0 1 0-.708z"
+                            />
+                          </svg>
+                        </span>
+                      </a>
+                    </li>
                   <li class="interview_child" *ngIf='parent_active'>
                     <a routerLink="/main/myinterviews"
                       routerLinkActive="active">
@@ -92,11 +145,11 @@
                         </span>
                       </a>
                     </li>    
-                  <li>
-                    <a routerLink="/main/jobs"
+                  <li class="interview_child" *ngIf='parent_active'>
+                    <a routerLink="/main/exams"
                       routerLinkActive="active">
                       <img width="25px" src="assets/interviewee.png" alt="">
-                     Jobs
+                      Exams
                       <span
                         class="pull-right">
                         <svg
@@ -120,6 +173,8 @@
                         </span>
                       </a>
                     </li>    
+                    
+               
                       <li (click)="activateUserChild()">
                         <a routerLink="users" routerLinkActive="active">
                           <img width="25px" src="assets/panelists.png" alt="">
@@ -328,7 +383,7 @@
                         </section>
                       </section>
                     </div>
-                    <div class="col-md-9 col-lg-9 col-xl-9 col-sm-9 col-xs-12 left-row">
+                    <div class="col-md-9 col-lg-9 col-xl-9 col-sm-9 col-xs-12">
                       <div class="containersd">
                         <div class="row top-outlet">
                           <div class="col-md-2">
