--- a/src/app/jobs/jobs-list/view/view.component.html
+++ b/src/app/jobs/jobs-list/view/view.component.html
@@ -34,9 +34,18 @@
 
     </div>
     <div class="col-md-9">
+        <div class="text-top">
+            <h3> <b>Applications</b></h3>
+        </div>
         <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z1">
-            <mat-tab label="APPLICANTS">
+            <mat-tab label="NEW APPLICATIONS">
                 <app-list-applicants></app-list-applicants>
+            </mat-tab>
+            <mat-tab label="ACCEPTED">
+                <app-accepted-applications></app-accepted-applications>
+            </mat-tab>
+            <mat-tab label="REJECTED">
+                <app-rejected-applications></app-rejected-applications>
             </mat-tab>
           </mat-tab-group>  
     </div>
